init notification module
